fix: img-wrap을 poster-wrap으로 변경

--- a/src/styles/components/main.css
+++ b/src/styles/components/main.css
@@ -36,7 +36,7 @@
   padding: 20px;
   gap: 10px;
 }
-.img-wrap {
+.poster-wrap {
   width: 180px;
   height: 250px;
   border-radius: 10px;
